# AMproject

./: .gitignore  README.md  pyproject.toml
AgenticMemory/: cr_mh_32k_20q_gpt54mini_chunk512.json  cr_mh_32k_20q_gpt54mini_chunk512_trace.jsonl  cr_mh_32k_20q_gpt54mini_chunk512_trace_memprompt.jsonl  cr_mh_32k_20q_gpt54mini_chunk512_trace_memprompt_results.json  cr_mh_32k_20q_gpt54mini_chunk512_trace_results.json  cr_mh_6k_5q.json  cr_mh_6k_5q_chunk512_trace.jsonl  cr_mh_6k_5q_chunk512_trace_results.json  cr_sh_32k_20q_gpt54mini_chunk512.json  cr_sh_32k_20q_gpt54mini_chunk512_trace.jsonl  cr_sh_32k_20q_gpt54mini_chunk512_trace_results.json  cr_sh_32k_20q_stageB_topic_regrouping_openrouter_grouptrace.jsonl  cr_sh_32k_20q_stageB_topic_regrouping_openrouter_recenttrace.jsonl  cr_sh_32k_20q_stageB_topic_regrouping_openrouter_results.json  cr_sh_32k_20q_stageB_topic_regrouping_openrouter_trace.jsonl  cr_sh_32k_50q_gpt54mini_chunk512_trace_memprompt_openrouter.jsonl  cr_sh_32k_50q_gpt54mini_chunk512_trace_memprompt_openrouter_results.json  cr_sh_32k_50q_stageA_recent_archival_openrouter_recenttrace.jsonl  cr_sh_32k_50q_stageA_recent_archival_openrouter_results.json  cr_sh_32k_50q_stageA_recent_archival_openrouter_trace.jsonl  cr_sh_32k_50q_stageB_pingpong_b4096_grouptrace.jsonl  cr_sh_32k_50q_stageB_pingpong_b4096_recenttrace.jsonl  cr_sh_32k_50q_stageB_pingpong_b4096_results.json  cr_sh_32k_50q_stageB_pingpong_b4096_trace.jsonl  cr_sh_32k_50q_stageB_pingpong_b8192_grouptrace.jsonl  cr_sh_32k_50q_stageB_pingpong_b8192_recenttrace.jsonl  cr_sh_6k_20q_chunk512.json  (+45 more)
(+39 files in other folders)
